--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "cd react-ref && npm run dev",
+		"dev": "cd react-ref && npm run dev",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
 	"repository": {
