--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "cd react-ref && npm run dev",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "cd react-ref && npm run test"
 	},
 	"repository": {
 		"type": "git",
