update babel config to resolve jest import react error, refactor generated style for hamburger light/dark toggle, updated jest tests to properly accomodate custom components

--- a/react-ref/package.json
+++ b/react-ref/package.json
@@ -31,12 +31,13 @@
 		"vite": "^4.2.0"
 	},
 	"jest": {
-		"testEnvironment": "jsdom",
+		"testEnvironment": "jest-environment-jsdom",
 		"setupFilesAfterEnv": [
 			"<rootDir>/jest-setup.ts"
 		],
 		"moduleNameMapper": {
-			"\\.(css|less)$": "identity-obj-proxy"
+			"\\.(css|less)$": "identity-obj-proxy",
+			"^@/(.*)$": "<rootDir>/src/$1"
 		}
 	}
 }
