--- a/react-ref/package.json
+++ b/react-ref/package.json
@@ -24,9 +24,11 @@
 		"@types/react": "^18.0.28",
 		"@types/react-dom": "^18.0.11",
 		"@vitejs/plugin-react": "^3.1.0",
+		"babel-jest": "^29.5.0",
 		"identity-obj-proxy": "^3.0.0",
 		"jest": "^29.5.0",
 		"jest-environment-jsdom": "^29.5.0",
+		"react-test-renderer": "^18.2.0",
 		"typescript": "^4.9.3",
 		"vite": "^4.2.0"
 	},
